--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "rust-web-app"
+name = "rust-web-app-fedimint"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.70"
-authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
+authors = [
+    "Kody Low <kodylow7@gmail.com>",
+    "Jeremy Chone <jeremy.chone@gmail.com>",
+]
 license = "MIT OR Apache-2.0"
-description = "AwesomeApp rust-web-app."
-homepage="https://awesomeapp.dev"
-repository = "https://github.com/awesomeapp-dev/rust-web-app"
+description = "AwesomeApp rust-web-app fork with Fedimint Client"
 
 
 [dependencies]
@@ -20,8 +21,11 @@ serde_with = "3"
 axum = "0.6"
 tower-http = { version = "0.4", features = ["fs"] }
 tower-cookies = "0.9"
+# -- Tracing
+tracing = { version = "0.1.37", features = ["log"] }
+tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
 # -- Others
-uuid = {version = "1", features = ["v4","fast-rng",]}
+uuid = { version = "1", features = ["v4", "fast-rng"] }
 lazy-regex = "3"
 async-trait = "0.1"
 strum_macros = "0.25"
