--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,12 @@ uuid = { version = "1", features = ["v4", "fast-rng"] }
 lazy-regex = "3"
 async-trait = "0.1"
 strum_macros = "0.25"
+sqlx = { version = "0.7.1", features = [
+    "postgres",
+    "runtime-tokio-rustls",
+    "uuid",
+    "time",
+] }
 
 
 [dev-dependencies]
