--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,32 @@
+# Cargo config file. 
+# See: https://doc.rust-lang.org/cargo/reference/config.html
+
+# Environments variables set for all `cargo ...` commands.
 [env]
-RUST_LOG = "debug"
+
+# Scope down tracing, to filter out external lib tracing.
+RUST_LOG = "rust_web_app=debug"
+
+# -- Service Environment Variables
+# IMPORTANT: 
+#   For cargo commands only.
+#   For deployed env, should be managed by container 
+#   (e.g., Kubernetes).
+
+## -- Secrets
+# Keys and passwords below are for localhost dev ONLY.
+# e.g., "welcome" type of passwords.
+# i.e., Encryption not needed.
+
+SERVICE_DB_URL = "postgres://app_user:app_pwd@localhost/app_db"
+
+SERVICE_PWD_KEY = "MBi50ZIbvMvbwj0BxwcXIbEE1ekv4MMY2PmIojrDQCaC_L1ZkGCC5aSE3ZELQ7aN9NJY3yPjJibEBkEahilVhw"
+
+SERVICE_TOKEN_KEY = "fOjbm3GN4ifqyWXZCYIBCiiqwUOcVlXx5wxelwbUz0vhj9-OvQZYE3iq95Ws6YND09ZTJhQN33_yWDo3RCVUQA"
+SERVICE_TOKEN_DURATION_SEC = "1800"                                                                          # 30 minutes
 
 ## -- ConfigMap
-SERVICE_WEB_FOLDER = "web-folder/" # this is relative to cargo.toml, in deployed images use absolute path
+
+# This will be relative to Cargo.toml
+# In deployed images, probably use absolute path.
+SERVICE_WEB_FOLDER = "web-folder/"
