--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_with = "3"
 # -- Web
-axum = "0.6"
+axum = { version = "0.6", features = ["macros"] }
 tower-http = { version = "0.4", features = ["fs"] }
 tower-cookies = "0.9"
 # -- Tracing
@@ -29,14 +29,21 @@ uuid = { version = "1", features = ["v4", "fast-rng"] }
 lazy-regex = "3"
 async-trait = "0.1"
 strum_macros = "0.25"
-sqlx = { version = "0.7.1", features = [
+sqlx = { version = "0.6", features = [
     "postgres",
     "runtime-tokio-rustls",
     "uuid",
     "time",
 ] }
+sqlb = "0.3.8"
+rand = "0.8.5"
+hmac = "0.12.1"
+sha2 = "0.10.7"
+base64-url = "2.0.0"
+time = "0.3.28"
 
 
 [dev-dependencies]
 anyhow = "1"
 httpc-test = "0.1.1"
+serial_test = "2.0.0"
